--- a/components/NavLink/styles.css
+++ b/components/NavLink/styles.css
@@ -1,4 +1,4 @@
-.Nav_link {
+.NavLink {
   color: white;
   text-decoration: none;
   text-rendering: optimizeLegibility;
@@ -17,7 +17,6 @@
   padding-bottom: 0.2em;
 }
 
-.hvr-underline-from-center:hover,
 .hvr-underline-from-center:focus {
   outline: none;
 }
