--- a/components/global.css
+++ b/components/global.css
@@ -1,6 +1,10 @@
 :root {
   --purple: #5b37bf;
   --pink: #9e005d;
+  --lightPurple: #baa2ff;
+  --lightPink: #ffc7e8;
+  --yellow: #fff48a;
+  --light: #f7ffff;
   --dark: #2f2942;
 }
 
