Made improvements, scrolling issue, possibly caused by Storybook

--- a/components/Nav/styles.css
+++ b/components/Nav/styles.css
@@ -9,4 +9,18 @@
 
 .Nav___tall {
   min-height: 100vh;
+  min-width: 50vw;
+  overflow-y: scroll;
+}
+
+.Nav___tall::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+.Nav___tall::-webkit-scrollbar-track {
+  background: var(--lightPurple);
+}
+
+.Nav___tall::-webkit-scrollbar-thumb {
+  background: var(--pink);
 }
