--- a/components/NavLevel/styles.css
+++ b/components/NavLevel/styles.css
@@ -18,9 +18,11 @@
 
 .NavLevel___wide {
   flex-direction: row;
-  width: 100%;
+  flex-wrap: wrap;
   position: absolute;
-  bottom: -3em;
+  right: 0;
+  top: 3.5em;
+  left: 0;
   padding: 1em 1.5em;
 }
 
