--- a/components/global.css
+++ b/components/global.css
@@ -15,3 +15,12 @@ body {
 .js-focus-visible :focus:not([data-focus-visible-added]) {
   outline: none;
 }
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+}
